# coeurartificiel

./: README.md  Readme.md  jeu.py  pyproject.toml
client/: README.md  pubspec.yaml
client/android/app/: build.gradle
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: card.dart  game_page.dart  gamepage.dart  heart_game.dart  iaplayer.dart  main.dart  player.dart  settingspage.dart  trick.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner/Configs/: AppInfo.xcconfig
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
serveur/: coeurs_serveur.py  morpion_serveur.py
serveur/MCTS/main/: Card.py  Deck.py  Game.py  Hearts.py  MCTSPlayer.py  Player.py  RandomPlayer.py  State.py
serveur/MCTS/tests/: TestCard.py  TestDeck.py  TestGame.py  TestMCTSPlayer.py  TestNode.py  TestPlayer.py  TestRandomPlayer.py  TestState.py
serveur/pythonProject/: JoueurEncoder.py  carte.py  data.py  joueur.py  manche.py  paquet.py  partie.py  pli.py
serveur/pythonProject/src/: JoueurEncoder.py  NeuralNetwork.py  Play.py  Player.py  Trainer.py  coeurs_serveur.py  data.py  iteration0_score_7.356.pth  main.py  manche.py  model4_score_7.23.pth  nn.py  paquet.py  partie.py  pli.py  test.py  trained_model_0.pth  trained_model_1.pth  trained_model_2.pth
serveur/pythonProject/test/: TestEncodage.py  TestMisc.py  TestNN.py  TestPaquet.py
(+8 files in other folders)
