[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Noha <noha.doaif@insa-rennes.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.2"
matplotlib = "^3.8.2"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



